Re-add body font spec to css, which was done to solve some scoreboard layout issue
Also clean up some obsolete css from jury.

--- a/webapp/web/style_domjudge.css
+++ b/webapp/web/style_domjudge.css
@@ -1,3 +1,9 @@
+body {
+    color: black;
+    background-color: white;
+    font-family: Roboto, sans-serif;
+}
+
 /* menu */
 #menuDefault ul li.nav-item {
     white-space: nowrap;
